--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "sequelize": "^4.33.3",
